--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 ADEBISI OLUWATOMIWA<tommydebisi@gmail.com>
-BRIGHT OKON
+BRIGHT OKON<brightiniabasi@gmail.com>
